k8s/overlays/single-node/search.yaml
apiVersion: v1
kind: Service
metadata:
  name: search
spec:
  type: NodePort
  ports:
      - port: 80
        nodePort: 30001

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: search

spec:
  template:
    spec:
      volumes:
        - name: models
          hostPath:
            path: /home/collabovid/data/models
